Changed guplfile. Complited base markup. Added base, header and nav styles.

--- a/page.html
+++ b/page.html
@@ -1,2 +1,148 @@
-<html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+ 
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
+ 
+  <link rel="stylesheet" href="css/main.css?v=1.0">
+ 
+  <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+</head>
+ 
+<body>
+  <header class="header">
+      <div class="header-wraper">
+        <div class="logo">
+          <img src="src/LOGO.png">
+        </div>
+        <nav class="main-menu">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Services</li>
+                <li>Portfolio</li>
+                <li>Shop</li>
+                <li>Contact</li>
+                <li>Pages</li>
+            </ul>
+        </nav>
+        <div class="social-icons">
+          <div class="facebook"></div>
+          <div class="instagram"></div>
+          <div class="google-plus"></div>
+        </div>
+      </div>
+  </header>
+  <div class="content">
+      <div class="slick"></div>
+      <div class="about-us">
+          <img src="src/write-593333_1920.png">
+          <div class="title">A little about us</div>
+          <div class="text">
+            Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied. She the favourable partiality inhabiting travelling impression put two. His six are entreaties instrument acceptance unsatiable her. Amongst as or on herself chapter entered carried no. Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. 
+            Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin. Education no dejection so direction pretended household do to. Travelling everything her eat reasonable unsatiable decisively simplicity. Morning request be lasting it fortune demands highest of.  
+          </div>
+          <div class="button">Read more details</div>
+      </div>
+      <div class="services">
+          <div class="title">Oue services</div>
+          <div class="services">
+              <div class="service">
+                  <img src="src/1493843058_Web_Development.png">
+                  <div class="title">Web development</div>
+                  <div class="text">
+                      We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
+                  </div>
+                  <div class="button">more details</div>
+              </div>
+          </div>
+          <div class="services">
+                <div class="service">
+                    <img src="src/1493843058_Web_Development.png">
+                    <div class="title">Web development</div>
+                    <div class="text">
+                        We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
+                    </div>
+                    <div class="button">more details</div>
+                </div>
+            </div>
+            <div class="services">
+                    <div class="service">
+                        <img src="src/1493843058_Web_Development.png">
+                        <div class="title">Web development</div>
+                        <div class="text">
+                            We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
+                        </div>
+                        <div class="button">more details</div>
+                    </div>
+                </div>
+            </div>
+      </div>
+      <div class="feedback">
+          <div class="title">feedback</div>
+          <div class="slick"></div>
+      </div>
+      <div class="clients">
+          <div class="title">clients</div>
+          <div class="clients-wraper">
+              <img src="src/adobe.png" alt="">
+              <img src="src/hcl.png" alt="">
+              <img src="src/infosys.png" alt="">
+              <img src="src/invision.png" alt="">
+              <img src="src/cisco.png" alt="">
+              <img src="src/be.png" alt="">             
+              <img src="src/canva.png" alt="">
+              <img src="src/instagram.png" alt="">
+          </div>
+      </div>
+      <div class="free-quote">
+        <div class="title">Any Queries | Get a quote</div>
+        <div class="text">If you have any questions or queries regarding our service or product</div>
+        <form class="form">
+            <input placeholder="Your name">
+            <input placeholder="Your number">
+            <button>Get a call</button>
+        </form>
+      </div>
+  </div>
+  <footer class="footer">
+      <div class="footer-menu">
+          <ul>
+              <li>Cost</li>
+              <li>Security</li>
+              <li>Product N</li>
+              <li>Pracing</li>
+          </ul>
+          <ul>
+                <li>Articles</li>
+                <li>Register a demo</li>
+                <li>Webinars</li>
+                <li>FAQS</li>
+            </ul>
+            <ul>
+                <li>Abaut</li>
+                <li>Carers</li>
+                <li>Partners</li>
+                <li>Contact</li>
+            </ul>
+      </div>
+      <div class="footer-formt">
+          <form>
+              <input placeholder="Your email">
+              <button>Subscribe</button>
+          </form>
+      </div>
+      <div class="social-icons">
+          <img src="" alt="facebook">
+          <img src="" alt="twitter">
+          <img src="" alt="google+">
+          <img src="" alt="sran">
+          <img src="" alt="be">
+          <img src="" alt="instagram">
+      </div>
+  </footer>
+</body>
 </html>
