--- a/page.html
+++ b/page.html
@@ -30,9 +30,15 @@
             </ul>
         </nav>
         <div class="social-icons">
-          <div class="facebook"></div>
-          <div class="instagram"></div>
-          <div class="google-plus"></div>
+          <div class="facebook">
+              <img src="src/facebook-social.png" alt="facebook">
+          </div>
+          <div class="instagram">
+              <img src="src/instagram-social.png" alt="instagram">
+          </div>
+          <div class="google-plus">
+              <img src="src/google-plus-social.png" alt="google-plus">
+          </div>
         </div>
       </div>
   </header>
