--- a/page.html
+++ b/page.html
@@ -20,38 +20,44 @@
         </div>
         <nav class="main-menu">
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Services</li>
-                <li>Portfolio</li>
-                <li>Shop</li>
-                <li>Contact</li>
-                <li>Pages</li>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Pages</a></li>
             </ul>
         </nav>
         <div class="social-icons">
-          <div class="facebook">
-              <img src="src/facebook-social.png" alt="facebook">
+          <div class="item facebook">
+              <img src="src/facebook-social.png" alt="facebook" href="#">
           </div>
-          <div class="instagram">
-              <img src="src/instagram-social.png" alt="instagram">
+          <div class="item instagram">
+              <img src="src/instagram-social.png" alt="instagram" href="#">
           </div>
-          <div class="google-plus">
-              <img src="src/google-plus-social.png" alt="google-plus">
+          <div class="item google-plus">
+              <img src="src/google-plus-social.png" alt="google-plus" href="#">
           </div>
         </div>
       </div>
   </header>
   <div class="content">
-      <div class="slick"></div>
+      <div class="slick" style="height: 500px"></div>
       <div class="about-us">
-          <img src="src/write-593333_1920.png">
-          <div class="title">A little about us</div>
-          <div class="text">
-            Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied. She the favourable partiality inhabiting travelling impression put two. His six are entreaties instrument acceptance unsatiable her. Amongst as or on herself chapter entered carried no. Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. 
-            Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin. Education no dejection so direction pretended household do to. Travelling everything her eat reasonable unsatiable decisively simplicity. Morning request be lasting it fortune demands highest of.  
+          <div class="right">
+              <div class="image-wraper">
+                    <img src="src/write-593333_1920.png">
+              </div>
           </div>
-          <div class="button">Read more details</div>
+          <div class="left">
+                <div class="title">A little about us</div>
+                <div class="text">
+                  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied. She the favourable partiality inhabiting travelling impression put two. His six are entreaties instrument acceptance unsatiable her. Amongst as or on herself chapter entered carried no. Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. 
+                  Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin. Education no dejection so direction pretended household do to. Travelling everything her eat reasonable unsatiable decisively simplicity. Morning request be lasting it fortune demands highest of.  
+                </div>
+                <div class="button">Read more details</div>
+          </div>        
       </div>
       <div class="services">
           <div class="title">Oue services</div>
