Added bases styles to abaut us

--- a/page.html
+++ b/page.html
@@ -11,10 +11,10 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
- 
+ <img src="src/fonts/myriad/MyriadProBold/MyriadProBold.ttf">
 <body>
   <header class="header">
-      <div class="header-wraper">
+      <div class="header-wrapper">
         <div class="logo">
           <img src="src/LOGO.png">
         </div>
@@ -45,18 +45,20 @@
   <div class="content">
       <div class="slick" style="height: 500px"></div>
       <div class="about-us">
-          <div class="right">
-              <div class="image-wraper">
+          <div class="left">
+              <div class="image-wrapper">
                     <img src="src/write-593333_1920.png">
               </div>
           </div>
-          <div class="left">
-                <div class="title">A little about us</div>
-                <div class="text">
-                  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied. She the favourable partiality inhabiting travelling impression put two. His six are entreaties instrument acceptance unsatiable her. Amongst as or on herself chapter entered carried no. Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. 
-                  Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin. Education no dejection so direction pretended household do to. Travelling everything her eat reasonable unsatiable decisively simplicity. Morning request be lasting it fortune demands highest of.  
-                </div>
-                <div class="button">Read more details</div>
+          <div class="right">
+              <div class="content-wrapper">
+                    <div class="title">A little about us</div>
+                    <div class="text">
+                      Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied. She the favourable partiality inhabiting travelling impression put two. His six are entreaties instrument acceptance unsatiable her. Amongst as or on herself chapter entered carried no. Sold old ten are quit lose deal his sent. You correct how sex several far distant believe journey parties. We shyness enquire uncivil affixed it carried to. 
+                      Was drawing natural fat respect husband. An as noisy an offer drawn blush place. These tried for way joy wrote witty. In mr began music weeks after at begin. Education no dejection so direction pretended household do to. Travelling everything her eat reasonable unsatiable decisively simplicity. Morning request be lasting it fortune demands highest of.  
+                    </div>
+                    <a class="button" href="#">Read more details</a>
+              </div>             
           </div>        
       </div>
       <div class="services">
@@ -88,7 +90,7 @@
                         <div class="text">
                             We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
                         </div>
-                        <div class="button">more details</div>
+                        <a class="button">more details</a>
                     </div>
                 </div>
             </div>
@@ -99,7 +101,7 @@
       </div>
       <div class="clients">
           <div class="title">clients</div>
-          <div class="clients-wraper">
+          <div class="clients-wrapper">
               <img src="src/adobe.png" alt="">
               <img src="src/hcl.png" alt="">
               <img src="src/infosys.png" alt="">
