--- a/page.html
+++ b/page.html
@@ -62,41 +62,55 @@
           </div>        
       </div>
       <div class="services">
-          <div class="title">Oue services</div>
-          <div class="services">
-              <div class="service">
-                  <img src="src/1493843058_Web_Development.png">
-                  <div class="title">Web development</div>
-                  <div class="text">
-                      We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
-                  </div>
-                  <div class="button">more details</div>
-              </div>
-          </div>
-          <div class="services">
+          <div class="main-title">Our services</div>
+          <div class="services-wrapper">
+            <div class="services">
                 <div class="service">
-                    <img src="src/1493843058_Web_Development.png">
+                        <div class="image">
+                                <img src="src/1493843058_Web_Development.png">
+                          </div>
                     <div class="title">Web development</div>
                     <div class="text">
                         We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
                     </div>
-                    <div class="button">more details</div>
+                    <div class="button-wrapper">
+                            <a class="button">more details</a>
+                      </div>  
                 </div>
             </div>
             <div class="services">
-                    <div class="service">
-                        <img src="src/1493843058_Web_Development.png">
-                        <div class="title">Web development</div>
-                        <div class="text">
-                            We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
-                        </div>
-                        <a class="button">more details</a>
-                    </div>
-                </div>
-            </div>
+                  <div class="service">
+                        <div class="image">
+                                <img src="src/1493843058_Web_Development.png">
+                          </div>
+                      <div class="title">Web development</div>
+                      <div class="text">
+                          We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
+                      </div>
+                      <div class="button-wrapper">
+                            <a class="button">more details</a>
+                      </div>  
+                  </div>
+              </div>
+              <div class="services">
+                      <div class="service">
+                          <div class="image">
+                                <img src="src/1493843058_Web_Development.png">
+                          </div>
+                          <div class="title">Web development</div>
+                          <div class="text">
+                              We provide the best world class web  Little afraid its eat looked now. Very ye lady girl them good me make. It hardly cousin me always. An shortly village is raising we shewing replied.
+                          </div>
+                          <div class="button-wrapper">
+                                <a class="button">more details</a>
+                          </div>                         
+                      </div>
+                  </div>
+              </div>
+          </div>       
       </div>
       <div class="feedback">
-          <div class="title">feedback</div>
+          <div class="main-title">feedback</div>
           <div class="slick"></div>
       </div>
       <div class="clients">
