Added clients styles.

--- a/page.html
+++ b/page.html
@@ -11,7 +11,6 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 </head>
- <img src="src/fonts/myriad/MyriadProBold/MyriadProBold.ttf">
 <body>
   <header class="header">
       <div class="header-wrapper">
@@ -114,16 +113,36 @@
           <div class="slick"></div>
       </div>
       <div class="clients">
-          <div class="title">clients</div>
+          <div class="main-title">clients</div>
           <div class="clients-wrapper">
-              <img src="src/adobe.png" alt="">
-              <img src="src/hcl.png" alt="">
-              <img src="src/infosys.png" alt="">
-              <img src="src/invision.png" alt="">
-              <img src="src/cisco.png" alt="">
-              <img src="src/be.png" alt="">             
-              <img src="src/canva.png" alt="">
-              <img src="src/instagram.png" alt="">
+            <div class="image-wrapper">
+                <div class="image">
+                    <img class="client-image" src="src/adobe.png" alt="">
+                </div>
+                <div class="image">
+                    <img class="client-image" src="src/hcl.png" alt="">
+                </div>
+                <div class="image">
+                    <img class="client-image" src="src/infosys.png" alt="">
+                </div>
+                <div class="image">
+                    <img class="client-image" src="src/invision.png" alt="">
+                </div>               
+            </div>
+            <div class="image-wrapper">
+                    <div class="image">
+                        <img class="client-image" src="src/cisco.png" alt="">
+                    </div>
+                    <div class="image">
+                        <img class="client-image" src="src/be.png" alt="">
+                    </div>
+                    <div class="image">
+                        <img class="client-image" src="src/canva.png" alt="">
+                    </div>
+                    <div class="image">
+                        <img class="client-image" src="src/instagram.png" alt="">
+                    </div>                
+            </div>             
           </div>
       </div>
       <div class="free-quote">
