Added base get a quote styles.

--- a/page.html
+++ b/page.html
@@ -146,13 +146,17 @@
           </div>
       </div>
       <div class="free-quote">
-        <div class="title">Any Queries | Get a quote</div>
-        <div class="text">If you have any questions or queries regarding our service or product</div>
-        <form class="form">
-            <input placeholder="Your name">
-            <input placeholder="Your number">
-            <button>Get a call</button>
-        </form>
+        <div class="text-wrapper">
+            <div class="title">Any Queries | Get a quote</div>
+            <div class="text">If you have any questions or queries regarding our service or product</div>
+        </div>
+        <div class="form-wrapper">
+            <form class="form">
+                <input class="form-element" placeholder="Your name">
+                <input class="form-element" placeholder="Your number">
+                <button class="form-element button">Get a call</button>
+            </form>
+        </div>            
       </div>
   </div>
   <footer class="footer">
