Added footer styles.

--- a/page.html
+++ b/page.html
@@ -160,40 +160,59 @@
       </div>
   </div>
   <footer class="footer">
-      <div class="footer-menu">
-          <ul>
-              <li>Cost</li>
-              <li>Security</li>
-              <li>Product N</li>
-              <li>Pracing</li>
-          </ul>
-          <ul>
-                <li>Articles</li>
-                <li>Register a demo</li>
-                <li>Webinars</li>
-                <li>FAQS</li>
-            </ul>
-            <ul>
-                <li>Abaut</li>
-                <li>Carers</li>
-                <li>Partners</li>
-                <li>Contact</li>
-            </ul>
+      <div class="left">
+            <div class="footer-menu-wrapper">
+                    <ul class="footer-menu">
+                        <li class="headline">Product</li>
+                        <li>Cost</li>
+                        <li>Security</li>
+                        <li>Product N</li>
+                        <li>Pracing</li>
+                    </ul>
+                    <ul class="footer-menu">
+                          <li class="headline">Learn</li>
+                          <li>Articles</li>
+                          <li>Register a demo</li>
+                          <li>Webinars</li>
+                          <li>FAQS</li>
+                      </ul>
+                      <ul class="footer-menu">
+                          <li class="headline">Company</li>
+                          <li>Abaut</li>
+                          <li>Carers</li>
+                          <li>Partners</li>
+                          <li>Contact</li>
+                      </ul>
+                </div>
       </div>
-      <div class="footer-formt">
-          <form>
-              <input placeholder="Your email">
-              <button>Subscribe</button>
-          </form>
-      </div>
-      <div class="social-icons">
-          <img src="" alt="facebook">
-          <img src="" alt="twitter">
-          <img src="" alt="google+">
-          <img src="" alt="sran">
-          <img src="" alt="be">
-          <img src="" alt="instagram">
-      </div>
+      <div class="right">
+            <div class="footer-formt">
+                    <form class="form">
+                        <input class="form-element input-element" placeholder="Your email">
+                        <button class="form-element button">Subscribe</button>
+                    </form>
+                </div>
+                <div class="social-icons">
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/facebook.png" alt="facebook">
+                    </div>
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/twitter.png" alt="twitter">
+                    </div>
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/google-plus.png" alt="google+">
+                    </div>
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/dribbble.png" alt="sran">
+                    </div>
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/behance.png" alt="be">
+                    </div>
+                    <div class="image-wrapper">
+                        <img class="image" src="src/social/instagram.png" alt="instagram">
+                    </div>   
+            </div>
+      </div>          
   </footer>
 </body>
 </html>
